--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,53 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# Global ignore rules
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Dependencies
+node_modules
+.pnp
+.pnp.js
+
+# Visual Studio Code
+.vscode/
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/jsconfig.json
+.vscode/*.code-workspace
+
+# IntelliJ IDEA
+.idea/
+*.iml
+
+# Sublime Text
+*.sublime-workspace
+*.sublime-project
+
+# MacOS Finder
+.DS_Store
+
+# Windows System Files
+Thumbs.db
+desktop.ini
+
+# Testing
+coverage
+
+# Production
+build
+
+# Frontend-specific rules
+frontend/react-frontend/node_modules/
+frontend/react-frontend/build/
+frontend/react-frontend/coverage/
+
+# Ignore logs in the React frontend
+frontend/react-frontend/npm-debug.log*
+frontend/react-frontend/yarn-debug.log*
+frontend/react-frontend/yarn-error.log*
