--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Global ignore rules
 .DS_Store
+**/*.env
 .env.local
 .env.development.local
 .env.test.local
@@ -20,6 +21,7 @@ node_modules
 .vscode/launch.json
 .vscode/jsconfig.json
 .vscode/*.code-workspace
+*.swp
 
 # IntelliJ IDEA
 .idea/
@@ -28,9 +30,6 @@ node_modules
 # Sublime Text
 *.sublime-workspace
 *.sublime-project
-
-# MacOS Finder
-.DS_Store
 
 # Windows System Files
 Thumbs.db
@@ -51,3 +50,46 @@ frontend/react-frontend/coverage/
 frontend/react-frontend/npm-debug.log*
 frontend/react-frontend/yarn-debug.log*
 frontend/react-frontend/yarn-error.log*
+
+# BACKEND
+# Python bytecode
+backend/__pycache__/
+backend/**/__pycache__/
+backend/*.py[cod]
+backend/*$py.class
+
+# Local settings
+backend/local_settings.py
+
+# Environment variables
+backend/.env
+backend/*.env
+
+# PostgreSQL database files
+backend/db
+backend/pgdata/
+backend/*.sql
+backend/*.dump
+
+# Docker-related files
+docker-compose.override.yml
+*.pid
+
+# Django specific
+backend/*.log
+backend/db.sqlite3
+backend/media/
+backend/staticfiles/
+backend/static/
+backend/.well-known
+
+# Django migrations
+backend/**/migrations/*.py
+!backend/**/migrations/__init__.py
+
+# Logs and coverage
+backend/*.log
+backend/db.sqlite3
+
+backend/data
+backend/media
