--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -55,3 +55,5 @@ jobs:
           local-dir: ./frontend/react-frontend/build/ # Updated path
           server-dir: /public_html/
           dangerous-clean-slate: true
+          passive: true
+          timeout: 300
