--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -73,6 +73,6 @@ jobs:
             docker-compose down &&
             docker system prune -f &&  # Clean up old images
             docker-compose up -d --build
-            docker-compose exec backend python manage.py makemigrations &&
-            docker-compose exec backend python manage.py migrate
+            docker-compose exec web python manage.py makemigrations &&
+            docker-compose exec web python manage.py migrate
           '
